# Panda_Workstation

./: README.md
franka_panda_description/: README.md  package.xml
franka_panda_description/robots/: hand.xacro  panda.gazebo.xacro  panda_arm (copy).xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro
panda_control/: CMakeLists.txt  README.md  package.xml  setup.py
panda_control/launch/: demo.launch
panda_control/scripts/: panda_script_demo.py
panda_control/scripts/demo/: box.py  horse.py  transformers.py  transformers_horse.py
panda_control/src/panda_control/: __init__.py  panda_moveit.py
panda_moveit_config/: .setup_assistant  README.md  package.xml
panda_moveit_config/config/: controllers.yaml  ompl_planning.yaml  panda.srdf  ros_controllers.yaml
panda_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  moveit_controllers.launch  panda_moveit.launch  panda_moveit_controller_manager.launch.xml  planning_context.launch  ros_controllers (copy).launch  ros_controllers.launch  trajectory_execution.launch.xml
panda_world/: CMakeLists.txt  README.md  package.xml
panda_world/launch/: gazebo_spawn_box.launch  gazebo_spawn_panda.launch  gazebo_spawn_table.launch  gazebo_spawn_toy.launch  gazebo_spawn_workstation.launch  panda_gazebo.launch
panda_world/models/Avengers_Thor_PLlrpYniaeB/: model.sdf
panda_world/models/My_Little_Pony_Princess_Celestia/: model.sdf
panda_world/models/Transformers_Age_of_Extinction_Mega_1Step_Bumblebee_Figure/: model.sdf
panda_world/worlds/: README.md  panda_workstation.world  panda_workstation_box.world
(+7 files in other folders)
